# saev

./: .gitignore  COVERAGE.md  README.md  REGRESSIONS.md  justfile  pyproject.toml
contrib/classification/: reproduce.md
contrib/semprobe/: reproduce.md
docs/: index.html  llms.txt
docs/assets/modelcards/: SAE_BioCLIP_24K_ViT-B-16_iNat21.md  SAE_CLIP_24K_ViT-B-16_IN1K.md  SAE_DINOv2_24K_ViT-B-14_IN1K.md
docs/saev/: activations.html  config.html  index.html  test_training.html  training.html  visuals.html
docs/saev/app/: data.html
docs/saev/nn/: index.html  modeling.html  objectives.html  test_modeling.html  test_objectives.html
notebooks/: shuffle_acts.py
saev/: __init__.py  __main__.py  activations.py  config.py  guide.md  inference.md  test_activations.py  test_config.py  test_training.py  training.py
saev/app/: data.py
saev/interactive/: metrics.py
saev/nn/: __init__.py  modeling.py  objectives.py  test_modeling.py  test_objectives.py
scripts/: coverage.py  push_models.py  regressions.py
web/src/: Classification.elm  Semseg.elm
