[project]
name = "saev"
version = "0.1.0"
description = "Sparse autoencoders for vision transformers in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.4.1",
    "beartype>=0.19.0",
    "datasets>=3.0.1",
    "einops>=0.8.0",
    "jaxtyping>=0.2.34",
    "marimo>=0.9.10",
    "matplotlib>=3.9.2",
    "open-clip-torch>=2.28.0",
    "pillow>=10.4.0",
    "polars>=1.12.0",
    "submitit>=1.5.2",
    "torch>=2.5.0",
    "tqdm>=4.66.5",
    "tyro>=0.8.12",
]

[project.urls]
Homepage = "https://osu-nlp-group.github.io/saev"
Issues = "https://github.com/OSU-NLP-Group/saev/issues"

[project.optional-dependencies]
classification = [
    "scipy>=1.15.1",
]
training = [
    "wandb>=0.19.6",
]

[tool.setuptools]
packages = ["saev"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F722", "E402", "E501"]

[tool.uv]
package = true
default-groups = "all"

[dependency-groups]
dev = [
    "hypothesis>=6.119.0",
    "hypothesis-torch>=0.8.4",
    "pdoc3>=0.11.1",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "gradio>=3.36.1",
    "huggingface-hub>=0.26.5",
    "ruff>=0.8.2",
    "pytest-cov>=6.1.1",
    "pytest-json-report>=1.5.0",
    "coverage-badge>=1.1.2",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
